--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ swc_site: "https://software-carpentry.org"
 swc_pages: "https://swcarpentry.github.io"
 template_repo: "https://github.com/carpentries/styles"
 example_repo: "https://github.com/carpentries/lesson-example"
-example_site: "https://carpentries.github.com/lesson-example"
+example_site: "https://carpentries.github.io/lesson-example"
 workshop_repo: "https://github.com/carpentries/workshop-template"
 workshop_site: "https://carpentries.github.io/workshop-template"
 training_site: "https://carpentries.github.io/instructor-training"
